# AIDA-versions

New_Version_20250531/: AIDA v2.ipynb  AIDA_v2_Simple_RAG.ipynb  Create_RAG_docs_from_db.py  Create_RAG_docs_from_dbv2.ipynb  Custom_RAG_Splitter_for_db.ipynb  Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  README_PDF_Chunking.md  northwind_chunks.txt  northwind_chunks_analysis.csv  northwind_rag_ready.json  pdf_section_chunker.py  pyproject.toml  rag_chunking_example.py  test_generic_pdf.py
Version1/: NEONDB_SETUP.md  RAG_INTEGRATION_SUMMARY.md  agent.py  config.py  database.py  database_test.py  env_template.txt  llm_handler.py  models.py  northwind_test.db  requirements.txt  streamlit_app.py  streamlit_app_broken.py  test_batman.py  test_complete_system.py  test_database_question.py  test_rag_integration.py  visualization.py
Version2/: TRACING_SETUP.md  northwind_test.db  package-lock.json  package.json  pyproject.toml  test_neondb_connection.py
Version2/RAG/: AIDA_v2_Simple_RAG.ipynb  Create_RAG_docs_from_db.py
Version2/backend/: agent.py  app.py  database.py  llm_handler.py  rag_tool.py  requirements.txt  visualization.py
Version2/backend/tests/: test_app.py
Version2/frontend/: package-lock.json  package.json
Version2/frontend/src/: App.test.tsx  App.tsx
